--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ Furthermore, we design a hybrid graph-based viewpoint selection mechanism that e
 
                     <div class="column has-text-centered">
                         <div class="content">
-                            <h2 class="title is-5">Room0 PSNR=35.37</h2>
+                            <h2 class="title is-5">Room0</h2>
                             <video id="ns_r0" autoplay controls muted loop playsinline height="150%">
                                 <source src="./static/video/single/render_room0.mp4"
                                         type="video/mp4">
@@ -312,7 +312,7 @@ Furthermore, we design a hybrid graph-based viewpoint selection mechanism that e
 
                     <div class="column has-text-centered">
                         <div class="content">
-                            <h2 class="title is-5">Room1 PSNR=37.75</h2>
+                            <h2 class="title is-5">Room1</h2>
                             <video id="ps_r0" autoplay controls muted loop playsinline height="150%">
                                 <source src="./static/video/single/render_room1.mp4"
                                         type="video/mp4">
@@ -323,7 +323,7 @@ Furthermore, we design a hybrid graph-based viewpoint selection mechanism that e
 
                     <div class="column has-text-centered">
                         <div class="content">
-                            <h2 class="title is-5">Room2 PSNR=38.17</h2>
+                            <h2 class="title is-5">Room2</h2>
                             <video id="ss_r0" autoplay controls muted loop playsinline height="150%">
                                 <source src="./static/video/single/render_room2.mp4"
                                         type="video/mp4">
@@ -350,7 +350,7 @@ Furthermore, we design a hybrid graph-based viewpoint selection mechanism that e
 
                     <div class="column has-text-centered">
                         <div class="content">
-                            <h2 class="title is-5">Office0 PSNR=41.70</h2>
+                            <h2 class="title is-5">Office0</h2>
                             <video id="ss_r0" autoplay controls muted loop playsinline height="150%">
                                 <source src="./static/video/single/render_office0.mp4"
                                         type="video/mp4">
@@ -361,7 +361,7 @@ Furthermore, we design a hybrid graph-based viewpoint selection mechanism that e
 
                     <div class="column has-text-centered">
                         <div class="content">
-                            <h2 class="title is-5">Office2 PSNR=35.76</h2>
+                            <h2 class="title is-5">Office2</h2>
                             <video id="ss_r0" autoplay controls muted loop playsinline height="150%">
                                 <source src="./static/video/single/render_office2.mp4"
                                         type="video/mp4">
@@ -372,7 +372,7 @@ Furthermore, we design a hybrid graph-based viewpoint selection mechanism that e
 
                     <div class="column has-text-centered">
                         <div class="content">
-                            <h2 class="title is-5">Office4 PSNR=36.71</h2>
+                            <h2 class="title is-5">Office4</h2>
                             <video id="ss_r0" autoplay controls muted loop playsinline height="150%">
                                 <source src="./static/video/single/render_office4.mp4"
                                         type="video/mp4">
