--- a/index.html
+++ b/index.html
@@ -768,11 +768,15 @@ Furthermore, we design a hybrid graph-based viewpoint selection mechanism that e
     <section class="section" id="BibTeX">
         <div class="container is-max-desktop content">
             <h2 class="title">BibTeX</h2>
-            <pre><code>@inproceedings{1,
-                      author    = {2},
-                      title     = {3},
-                      booktitle = {4},
-                      year      ={5},
+            <pre><code>@misc{zheng2024gsorbslamgaussiansplattingslam,
+            title={GSORB-SLAM: Gaussian Splatting SLAM benefits from ORB features and Transmittance information}, 
+            author={Wancai Zheng and Xinyi Yu and Jintao Rong and Linlin Ou and Yan Wei and Libo Zhou},
+            year={2024},
+            eprint={2410.11356},
+            archivePrefix={arXiv},
+            primaryClass={cs.RO},
+            url={https://arxiv.org/abs/2410.11356}, 
+}
 }</code></pre>
         </div>
     </section>
